# CameLION

./: .gitignore  .prettierrc.yaml  README.md
.build/: buildWasm.js  linkWasm.js  package.json  setupRust.js  setupUI.js  setupWASM.js  triggerRefresh.js  utils.js
.github/workflows/: drawio.yml
CameLION_Planning/: Actions.drawio  LoadingSequence.xopp  README.md  UI-sketch.xopp
CameLION_Rust_MT_Testing/: Cargo.toml
CameLION_Rust_MT_Testing/src/: lib.rs
CameLION_Rust_WebGl/: Cargo.toml  rust-toolchain.toml
CameLION_Rust_WebGl/src/: lib.rs
CameLION_TS_UI/: .gitignore  .proxyrc.js  capacitor.config.json  craco.config.js  craco.fixloaders.js  ionic.config.json  package.json  tsconfig.json
CameLION_TS_UI/public/: index.html  manifest.json  updatePage.js
CameLION_TS_UI/src/: App.tsx  index.tsx  serviceWorkerRegistration.ts
CameLION_TS_UI/src/components/: IconToggle.tsx
CameLION_TS_UI/src/pages/: Home.tsx  Tab2.tsx  Tab3.tsx
CameLION_TS_UI/src/theme/: global.scss
CameLION_TS_UI/src/utils/: wasm.ts  wasmWorker.ts
CameLION_UI/: package-lock.json  package.json
CameLION_UI/src/: service-worker.ts
CameLION_UI/src/components/: ExploreContainer.scss  ExploreContainer.tsx  IconToggle.tsx
CameLION_UI/src/pages/: Tab2.tsx  Tab3.tsx
CameLION_UI/src/theme/: variables.scss
git/hooks/: pre-commit
planning/: 2021-11-22-Note-16-25.xopp  Actions.drawio  Planning.drawio  README.md  Untitled Diagram.drawio
