[package]
name = "came-lion-mt-testing"
authors = ["Peter Viechter <zelberor@schnalzerbuam.de>", "Tobias Kiehnlein <tobias@kiehnlein.com>"]
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
